--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=8000
-MONGO_URI = mongodb+srv://<username>:<password>@cluster0.92wu9jw.mongodb.net/TODO
+MONGO_URI = mongodb+srv://ShivishDB:Shivam123@cluster0.92wu9jw.mongodb.net/TODO
